Synced html file with css pls work

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="meetingminutes.css">
     <title>Meeting Minutes</title>
     <meta charset="UTF-8"> 
     <link rel="icon" type="image/x-icon" href="https://nickehsani.github.io/Lab2_Starter/images/logo.png">
