--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Meeting Minutes</title>
     <meta charset="UTF-8"> 
     <link rel="icon" type="image/x-icon" href="https://nickehsani.github.io/Lab2_Starter/images/logo.png">
+    <style>
+        body {
+            background-color: rgba(53, 181, 223, 0.571);
+        }
+    </style>
     
   </head>
   <body>
