--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
     
   </head>
-  <body>
+  <body class="body">
     <header>
         <h1> Tea Club's Meeting Minutes </h1>
         <img class="fit-picture" src="https://nickehsani.github.io/Lab2_Starter/images/logo.png" alt="Tea Club logo" height="270">
@@ -22,6 +22,7 @@
     </header>
     <main>
         <section>
+            
             <h2> Things to do:</h2>
             <ol>
                 <li> See results of Warren College Student Counsel funding request</li>
