--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!--Header-->
   <head>
     <link rel="stylesheet" href="meetingminutes.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
     <title>Meeting Minutes</title>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
+
     <link rel="icon" type="image/x-icon" href="https://nickehsani.github.io/Lab2_Starter/images/logo.png">
     <style>
         body {
@@ -22,7 +25,7 @@
     </header>
     <main>
         <section>
-            
+
             <h2> Things to do:</h2>
             <ol>
                 <li> See results of Warren College Student Counsel funding request</li>
@@ -123,43 +126,46 @@
             </details>
         </section>
     </main>
+    <!--footer-->
     <footer>
-        <h3> Polls and Questions</h3>
-        <form>
-            <fieldset>
-                <legend>Polls</legend>
-                <label>Name:</label>
-                <input type="text"><br><br>
-                <label>Should we change the theme song?</label>
-                <input type="radio" id="yes" name="feedtype" value="yes">
-                <label for="yes">yes</label>
-                <input type="radio" id="no" name="feedtype" value="no">
-                <label for="no">no</label><br><br>
-                <label>Your suggestion of the replacement song:</label>
-                <input type="text"><br><br>
-                <label for="music">Choose the type of music you prefer:</label>
-                <select name="music" id="music">
-                    <option value="Rock">Rock</option>
-                    <option value="Pop">Pop</option>
-                    <option value="Classical">Classical</option>
-                    <option value="Hip Hop">Hip Hop</option>
-                </select><br><br>
-                <input type="submit" value="submit">
-            </fieldset>
-            <fieldset>
-                <legend>Anonymous Feedback and Questions</legend>            
-                <label for="enjoymeeting"> Did you enjoy the meeting? </label>
-                <input list="response" id="enjoymeeting" name="enjoymeeting">
-                <datalist id="response">
-                    <option value="Yes"></option>
-                    <option value="NO!"></option>
-                </datalist><br><br>
+        <boxshortauto id="poll">
+            <h3> Polls and Questions</h3>
+            <form>
+                <fieldset>
+                    <legend>Polls</legend>
+                    <label>Name:</label>
+                    <input type="text"><br><br>
+                    <label>Should we change the theme song?</label>
+                    <input type="radio" id="yes" name="feedtype" value="yes">
+                    <label for="yes">yes</label>
+                    <input type="radio" id="no" name="feedtype" value="no">
+                    <label for="no">no</label><br><br>
+                    <label>Your suggestion of the replacement song:</label>
+                    <input type="text"><br><br>
+                    <label for="music">Choose the type of music you prefer:</label>
+                    <select name="music" id="music">
+                        <option value="Rock">Rock</option>
+                        <option value="Pop">Pop</option>
+                        <option value="Classical">Classical</option>
+                        <option value="Hip Hop">Hip Hop</option>
+                    </select><br><br>
+                    <input type="submit" value="submit">
+                </fieldset>
+                <fieldset>
+                    <legend>Anonymous Feedback and Questions</legend>            
+                    <label for="enjoymeeting"> Did you enjoy the meeting? </label>
+                    <input list="response" id="enjoymeeting" name="enjoymeeting">
+                    <datalist id="response">
+                        <option value="Yes"></option>
+                        <option value="NO!"></option>
+                    </datalist><br><br>
 
-                <textarea id="feedback" name="feedback" rows="4" cols="50">Type your feedback here</textarea><br><br>
-                <input type="date" id="date" name="date submitted"><br><br>
-                <input type="button" value="send feedback"> 
-            </fieldset>
-        </form>
+                    <textarea id="feedback" name="feedback" rows="4" cols="50">Type your feedback here</textarea><br><br>
+                    <input type="date" id="date" name="date submitted"><br><br>
+                    <input type="button" value="send feedback"> 
+                </fieldset>
+            </form>
+        </boxshortauto>
     </footer>
   </body>
 </html>
