--- a/index.html
+++ b/index.html
@@ -6,26 +6,27 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
     <title>Meeting Minutes</title>
     <meta charset="UTF-8">
-
     <link rel="icon" type="image/x-icon" href="https://nickehsani.github.io/Lab2_Starter/images/logo.png">
     <style>
         body {
             background-color: rgba(53, 181, 223, 0.571);
         }
     </style>
-    
   </head>
+  <!--body-->
   <body class="body">
     <header>
-        <h1> Tea Club's Meeting Minutes </h1>
+        <h1 style="color: maroon"> Tea Club's Meeting Minutes </h1>
         <img class="fit-picture" src="https://nickehsani.github.io/Lab2_Starter/images/logo.png" alt="Tea Club logo" height="270">
-        <h4> Date: 10/9/22 </h4>
-        <h4> Start Time: 2:30pm, End Time 3:50pm</h4>
-        <h3> Topic of Meeting: Coaster-Making Night</h3>
+        <shortAuto>
+            <h4> Date: 10/9/22 </h4>
+            <h4> Start Time: 2:30pm, End Time 3:50pm</h4>
+            <h3> Topic of Meeting: Coaster-Making Night</h3>
+        </shortAuto>
     </header>
     <main>
         <section>
-
+            
             <h2> Things to do:</h2>
             <ol>
                 <li> See results of Warren College Student Counsel funding request</li>
@@ -89,7 +90,7 @@
         <hr>
         <div>
             <nav>
-                Relevant Links:
+                <strong>Links: </strong> <br>
                 <a href="https://nickehsani.github.io/Lab2_Starter/images/flyer.png"> Flyer Sample From Last Year </a>
             </nav>
 
@@ -101,7 +102,7 @@
                 <b>below</b> is a recording of our current theme song, please 
                 give it a listen.
             </p>
-            <figure>
+            <figure class="audioSection">
                 <figcaption> Audio of our theme song</figcaption>
                 <audio 
 
@@ -118,12 +119,12 @@
             <video controls width="270">
                 <source src="https://nickehsani.github.io/Lab2_Starter/AudioVisuals/meon___ji-post-2022_09_11_15_32-1.mp4" type="video/mp4">
                 <a href="https://nickehsani.github.io/Lab2_Starter/AudioVisuals/meon___ji-post-2022_09_11_15_32-1.mp4"> </a>
-
             </video>
             <details>
                 <summary> Tony's comments on this video:</summary>
                 <p> I love this cat with all my heart and it is the most important thing in the world. </p>
             </details>
+
         </section>
     </main>
     <!--footer-->
