--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/x-icon" href="https://nickehsani.github.io/Lab2_Starter/images/logo.png">
     <style>
         body {
-            background-color: rgba(53, 181, 223, 0.571);
+            background-color: hsl(36, 100%, 90%);
         }
     </style>
   </head>
@@ -19,73 +19,108 @@
         <h1 style="color: maroon"> Tea Club's Meeting Minutes </h1>
         <img class="fit-picture" src="https://nickehsani.github.io/Lab2_Starter/images/logo.png" alt="Tea Club logo" height="270">
         <shortAuto>
-            <h4> Date: 10/9/22 </h4>
-            <h4> Start Time: 2:30pm, End Time 3:50pm</h4>
+            <h4> Date: 10/9/22 </h4> <br>
+            <h4> Start Time: 2:30pm</h4>
+            <h4> End Time: 3:50pm</h4>
             <h3> Topic of Meeting: Coaster-Making Night</h3>
         </shortAuto>
     </header>
     <main>
         <section>
-            
-            <h2> Things to do:</h2>
-            <ol>
-                <li> See results of Warren College Student Counsel funding request</li>
-                <li> Write funding request of Marshall or Seventh Student Counsel if Warren says no</li>
-                <li> Update tea club funds spreadsheet from fundraising events</li>
-                <li> Create post for this event on social media</li>
+            <div class="longCenter">
+                <h2> Things to do:</h2>
+                <ol>
+                    <li> See results of Warren College Student Counsel funding request</li>
+                    <li> Write funding request of Marshall or Seventh Student Counsel if Warren says no</li>
+                    <li> Update tea club funds spreadsheet from fundraising events</li>
+                    <li> Create post for this event on social media</li>
 
-            </ol>
+                </ol>
+            </div>
         </section>
-        <hr>
         <section>
-            <h2> Important Announcements</h2>
-            <ul>
-                <li> No meeting next week due to midterms.</li>
-                <li> We've raised over $200 from the Yogurt World fundraiser! </li> 
-            </ul>
-            <h3> Other Announcements</h3>
-            <strong> Wednesday is Tony's Birthday!</strong>
+            <div class="longLeft">
+                <h2> Important Announcements</h2>
+                <ul>
+                    <li> No meeting next week due to midterms.</li>
+                    <li> We've raised over $200 from the Yogurt World fundraiser! </li> 
+                </ul>
+                <h3> Other Announcements</h3>
+                <strong> Wednesday is Tony's Birthday!</strong>
+            </div>
+        </section>
+        <section>
+            <div class="longLeft">
+                <h2> Attendance</h2>
+                <b>
+                    <span style="color:rgb(63, 213, 78)">Present</span>
+                </b>
+                <ul> 
+                    <li> Nick</li>
+                    <li> Tony</li>
+                    <li> Monkey D. Luffy</li>
+                    <li> Robin</li> 
+                    <li> Franky</li>
+                    <li> Sanji</li>
+                    <li> Nami</li>
+                </ul>
+                <b>
+                    <span style="color:rgb(213, 63, 63)">Absent</span>
+                </b>
+                <ul>
+                    <li> Zoro</li>
+                    <li> Brook</li>
+                    <li> Jimbei</li>
+                    <li> Usopp</li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="longLeft">
+                <h2>New and Unfinished Business</h2>
+                <h4> Unfinished:</h4>
+                <ol>
+                    <li> Send Nami profile pictures for board member post.</li>
+                    <li> Check Progress of funding request.</li>
+                </ol>
+                <h4> New Business:</h4>
+                <ol>
+                    <li> Discuss meetup at Ding Tea</li>
+                    <li> Collab with baking club next quarter?</li>
+                </ol>
+            </div>
+        </section>
+        <section>
+            <div class="longLeft">
+                <h2> Misc. Comments, Concerns, Questions</h2>
+                <p> Sanji has <em>taken issue</em> with the current Tea Club theme song, which we use
+                    as background music during our meetings, claiming it to be <i>"too Fancy and uptight"</i>, 
+                    <b>below</b> is a recording of our current theme song, please 
+                    give it a listen.
+                </p>
+                <figure class="audioSection">
+                    <figcaption> Audio of our theme song</figcaption>
+                    <audio 
 
-        </section>
-        <hr>
-        <section>
-            <h2> Attendance</h2>
-            <p>
-                <span style="color:rgb(63, 213, 78)">Present</span>
-            </p>
-            <ul> 
-                <li> Nick</li>
-                <li> Tony</li>
-                <li> Monkey D. Luffy</li>
-                <li> Robin</li> 
-                <li> Franky</li>
-                <li> Sanji</li>
-                <li> Nami</li>
-            </ul>
-            <p>
-                <span style="color:rgb(213, 63, 63)">Absent</span>
-            </p>
-            <ul>
-                <li> Zoro</li>
-                <li> Brook</li>
-                <li> Jimbei</li>
-                <li> Usopp</li>
-            </ul>
-        </section>
-        <hr>
-        <section>
-            <h2>New and Unfinished Business</h2>
-            <h4> Unfinished:</h4>
-            <ol>
-                <li> Send Nami profile pictures for board member post.</li>
-                <li> Check Progress of funding request.</li>
-            </ol>
-            <h4> New Business:</h4>
-            <ol>
-                <li> Discuss meetup at Ding Tea</li>
-                <li> Collab with baking club next quarter?</li>
-            </ol>
+                        controls src="https://nickehsani.github.io/Lab2_Starter/AudioVisuals/Y2Mate.is%20-%20Luigi%20Boccherini%20Minuetto%20(classical)-kSE15tLBdso-48k-1655482874016.mp3"> 
+                        <a href="https://nickehsani.github.io/Lab2_Starter/AudioVisuals/Y2Mate.is%20-%20Luigi%20Boccherini%20Minuetto%20(classical)-kSE15tLBdso-48k-1655482874016.mp3"> </a>
 
+                    </audio>
+
+                </figure>
+                <p> We will vote on whether to keep this at the bottom of the meeting notes.</p>
+                <p>
+                    Also, Tony wanted to share this video of their cat, take a look at it if you have time!
+                </p>
+                <video controls width="270">
+                    <source src="https://nickehsani.github.io/Lab2_Starter/AudioVisuals/meon___ji-post-2022_09_11_15_32-1.mp4" type="video/mp4">
+                    <a href="https://nickehsani.github.io/Lab2_Starter/AudioVisuals/meon___ji-post-2022_09_11_15_32-1.mp4"> </a>
+                </video>
+                <details>
+                    <summary> Tony's comments on this video:</summary>
+                    <p> I love this cat with all my heart and it is the most important thing in the world. </p>
+                </details>
+            </div>
         </section>
         <hr>
         <div>
@@ -95,41 +130,10 @@
             </nav>
 
         </div>
-        <section>
-            <h2> Misc. Comments, Concerns, Questions</h2>
-            <p> Sanji has <em>taken issue</em> with the current Tea Club theme song, which we use
-                as background music during our meetings, claiming it to be <i>"too Fancy and uptight"</i>, 
-                <b>below</b> is a recording of our current theme song, please 
-                give it a listen.
-            </p>
-            <figure class="audioSection">
-                <figcaption> Audio of our theme song</figcaption>
-                <audio 
-
-                    controls src="https://nickehsani.github.io/Lab2_Starter/AudioVisuals/Y2Mate.is%20-%20Luigi%20Boccherini%20Minuetto%20(classical)-kSE15tLBdso-48k-1655482874016.mp3"> 
-                    <a href="https://nickehsani.github.io/Lab2_Starter/AudioVisuals/Y2Mate.is%20-%20Luigi%20Boccherini%20Minuetto%20(classical)-kSE15tLBdso-48k-1655482874016.mp3"> </a>
-
-                </audio>
-
-            </figure>
-            <p> We will vote on whether to keep this at the bottom of the meeting notes.</p>
-            <p>
-                Also, Tony wanted to share this video of their cat, take a look at it if you have time!
-            </p>
-            <video controls width="270">
-                <source src="https://nickehsani.github.io/Lab2_Starter/AudioVisuals/meon___ji-post-2022_09_11_15_32-1.mp4" type="video/mp4">
-                <a href="https://nickehsani.github.io/Lab2_Starter/AudioVisuals/meon___ji-post-2022_09_11_15_32-1.mp4"> </a>
-            </video>
-            <details>
-                <summary> Tony's comments on this video:</summary>
-                <p> I love this cat with all my heart and it is the most important thing in the world. </p>
-            </details>
-
-        </section>
     </main>
     <!--footer-->
     <footer>
-        <boxshortauto id="poll">
+        <shortAuto id="poll">
             <h3> Polls and Questions</h3>
             <form>
                 <fieldset>
